sewup-derive/tests/compile-fail/ewasm_output_from.stderr
error[E0277]: the trait bound `SimpleStruct: Serialize` is not satisfied
   --> $DIR/ewasm_output_from.rs:11:5
    |
11  |     ewasm_output_from!(simple_struct);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `SimpleStruct`
    |
   ::: $CARGO/bincode-1.3.3/src/lib.rs
    |
    |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SimpleStruct: Serialize` is not satisfied
   --> $DIR/ewasm_output_from.rs:12:5
    |
12  |     ewasm_output_from!(&simple_struct);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `SimpleStruct`
    |
   ::: $CARGO/bincode-1.3.3/src/lib.rs
    |
    |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: required because of the requirements on the impl of `Serialize` for `&SimpleStruct`
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[closure@$DIR/tests/compile-fail/ewasm_output_from.rs:13:5: 13:35]: Serialize` is not satisfied
   --> $DIR/ewasm_output_from.rs:13:5
    |
13  |     ewasm_output_from!(|_| "Str");
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |     |
    |     the trait `Serialize` is not implemented for `[closure@$DIR/tests/compile-fail/ewasm_output_from.rs:13:5: 13:35]`
    |     consider calling this closure
    |
   ::: $CARGO/bincode-1.3.3/src/lib.rs
    |
    |     T: serde::Serialize,
    |        ---------------- required by this bound in `sewup::bincode::serialize`
    |
    = note: this error originates in the macro `ewasm_output_from` (in Nightly builds, run with -Z macro-backtrace for more info)
